--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -40,3 +40,4 @@ jobs:
         $COMMAND_IAC validate
         $COMMAND_IAC plan
         $COMMAND_IAC apply -auto-approve
+        $COMMAND_IAC destroy
